# simulatable

./: CMakeLists.txt  README.md
.github/workflows/: cmake-macos.yml  cmake-ubuntu.yml  cmake-windows.yml
include/: Environment.h  EnvironmentLoader.h  EnvironmentMediator.h  EnvironmentSimulator.h  Force.h  ISimulatable.h  ISimulator.h
src/: EnvironmentLoader.cxx
tests/: main.cxx
